--- a/project/techtrends/requirements.txt
+++ b/project/techtrends/requirements.txt
@@ -1,2 +1,15 @@
 Flask==1.1.1
 werkzeug==0.16.1
+backports.entry-points-selectable==1.1.0
+click==8.0.1
+colorama==0.4.4
+distlib==0.3.2
+filelock==3.0.12
+itsdangerous==2.0.1
+Jinja2==3.0.1
+MarkupSafe==2.0.1
+platformdirs==2.3.0
+prometheus-client==0.11.0
+prometheus-flask-exporter==0.18.2
+six==1.16.0
+virtualenv==20.8.0
