--- a/project/techtrends/Dockerfile
+++ b/project/techtrends/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.9
 COPY . /app
-RUN pip install -r requirements.txt
+RUN make /app
 EXPOSE 3111
 
 # command to run on container start
